extended testcase for subscribing for PubSubPublisherSubscriberTest and fixed warnings